@@ -24,6 +24,7 @@ Added support for `__LINE__` macro
 Added support for `__FILE__` macro
 Added support for `__DATE__` macro which will always be `Jan  1 1970` and `__TIME__` which will always be `00:00:00`
 Added support for `__STDC__`, `__STDC_HOSTED__`, and `__STDC_VERSION__` macros. `__STDC_VERSION__` claims support for C89.
+Added initial support for function-like macros
 
 * 1.11 - 2023-11-01
 ** Added
